--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,7 @@ body {
     flex-flow: column;
     align-items: center;
     justify-content: center;
+    font-family: 'Poppins', sans-serif; 
 }
 
 $toastBackground: (
